--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>AirBnb clone</title>
+  </head>
 
-<head></head>
-
-<body style="margin: 0%; padding: 0%;">
-    <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+  <body style="margin: 0%; padding: 0%">
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
     <footer
-        style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0%; text-align: center; line-height: 60px;">
-        Holberton School</footer>
-</body>
-
+      style="
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: absolute;
+        bottom: 0%;
+      "
+    >
+      <p style="text-align: center; margin: 20px">Holberton School</p>
+    </footer>
+  </body>
 </html>
