--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
+  <head>
+    <meta charset="utf-8" />
+    <title>AirBnb clone</title>
     <style>
-        body {
-            margin: 0%;
-            padding: 0%;
-        }
-        header {
-            background-color: #FF0000;
-            height: 70px;
-            width: 100%;
-        }
-        footer {
-            background-color: #00FF00;
-            height: 60px;
-            width: 100%;
-            position: absolute;
-            bottom: 0%;
-            text-align: center;
-            line-height: 60px;
-        }
+      body {
+        margin: 0%;
+        padding: 0%;
+      }
+      header {
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+      }
+      footer {
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: absolute;
+        bottom: 0%;
+      }
+      footer p {
+        text-align: center;
+        margin: 20px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
-    <footer>Holberton School</footer>
-</body>
-
+    <footer><p>Holberton School</p></footer>
+  </body>
 </html>
