--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-    <link rel='stylesheet' href='styles/2-common.css'>
-    <link rel='stylesheet' href='styles/2-header.css'>
-    <link rel='stylesheet' href='styles/2-footer.css'>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AirBnb clone</title>
+    <link rel="stylesheet" href="styles/2-common.css" />
+    <link rel="stylesheet" href="styles/2-header.css" />
+    <link rel="stylesheet" href="styles/2-footer.css" />
+  </head>
+  <body>
     <header></header>
-    <footer>Holberton School</footer>
-</body>
-
+    <main></main>
+    <footer><p>Holberton School</p></footer>
+  </body>
 </html>
