--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-    <link rel='stylesheet' href='styles/3-common.css'>
-    <link rel='stylesheet' href='styles/3-header.css'>
-    <link rel='stylesheet' href='styles/3-footer.css'>
-    <link rel="icon" type="image/png" href="images/icon.png">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AirBnb clone</title>
+    <link rel="stylesheet" href="styles/3-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="icon" type="image/png" href="images/icon.png" />
+  </head>
+  <body>
     <header>
-        <div><img class="logo" src="images/logo.png"></div>
+      <div class="logo"></div>
     </header>
-    <footer>Holberton School</footer>
-</body>
-
+    <footer><p>Holberton School</p></footer>
+  </body>
 </html>
